[package]
name = "nd-portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
base64 = "0.21.4"
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
hmac = "0.12.1"
inquire = "0.6.2"
log = "0.4.20"
md-5 = "0.10.6"
network-interface = "1.0.3"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha1 = "0.10.6"
tokio = { version = "1.32.0", features = ["full"] }
